fix: update API baseURL for Render deployment

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 SECRET_KEY=myflasksecret
 JWT_SECRET_KEY=myjwtsecret
 DATABASE_URL=sqlite:///todo.db   # (for local dev, Postgres later on Render)
-EMAIL_USER=youremail@gmail.com
-EMAIL_PASS=yourpassword
+EMAIL_USER=adi484841@gmail.com
+EMAIL_PASS=hhcpfltsryqaxbpt
