Updated Dashboard with Navbar and Logout functionality

--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,5 @@ JWT_SECRET_KEY=myjwtsecret
 DATABASE_URL=sqlite:///todo.db   # (for local dev, Postgres later on Render)
 EMAIL_USER=adi484841@gmail.com
 EMAIL_PASS=hhcpfltsryqaxbpt
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_ID=76610639739-ekq368m7d44r5q1figakdi9qr7da59hq.apps.googleusercontent.com
